# netwatch

./: CMakeLists.txt  README.md  demo.py  docker-compose.yml  requirements.txt
dashboard/: index.html
docker/: Dockerfile.cpp  Dockerfile.python
proto/: netwatch.proto
scripts/: telemetry_simulator.py
src/: dashboard_api.py  detector.hpp  engine.cpp  grpc_server.py  telemetry.hpp
tests/: test_detector.cpp  test_simulator.py
